--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Test
         run: npm run test:unit
@@ -27,9 +27,9 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Deploy
+      - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
+          ACCESS_TOKEN: ${{ secrets.DEPLOY_KEY }}
           branch: gh-pages
           folder: dist
-          token: ${{ secrets.Github }}
