--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,5 +31,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
           ACCESS_TOKEN: ${{ secrets.DEPLOY_KEY }}
-          branch: gh-pages
+          branch: vue-expenses-tracker-project-918
           folder: dist
