--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,5 +30,6 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
+          ACCESS_TOKEN: ${{ secrets.DEPLOY_KEY }}
           branch: vue-expenses-tracker-project-918
           folder: dist
