--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-expenses-project",
+  "name": "vue-expenses-project-1",
   "homepage": "https://phongvoqocogit.github.io/vue-expenses-project/",
   "version": "0.0.0",
   "private": true,
