--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,3 +40,20 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        id: buildx
+
+      - name: Build and push Docker Image
+        uses: docker/build-push-action/v2
+        id: docker_build
+        with:
+          context: ./
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/vue-expenses-project
+          builder: ${{ steps.buildx.outputs.name }}
+
+      - name: Verify
+        run: echo ${{ steps.docker_build.outputs.digest }}
