--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,8 +61,10 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
+            docker stop vue-expenses-project || true
+            docker rm vue-expenses-project || true
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/vue-expenses-project
-            docker run -d -p 8080:80 ${{ secrets.DOCKERHUB_USERNAME }}/vue-expenses-project
+            docker run -d --name vue-expenses-project -p 8080:80 ${{ secrets.DOCKERHUB_USERNAME }}/vue-expenses-project
 
       - name: Verify
         run: echo ${{ steps.docker_build.outputs.digest }}
