--- a/.github/workflows/deploy_group_1_instance_1.yml
+++ b/.github/workflows/deploy_group_1_instance_1.yml
@@ -8,7 +8,7 @@ on:
     types: [opened, synchronize, reopened]
 
 env:
-  BRANCH_PATH: group-1/instance-1
+  BRANCH_PATH: group-1-instance-1
 
 jobs:
   deploy:
