Update nginx default.conf to handle assets requests

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,7 +4,7 @@ server {
     root /usr/share/nginx/html;
     index index.html index.htm;
 
-    location / {
-        try_files  $uri =404;
+    location /assets/ {
+        try_files $uri =404;
     }
 }
